==> Mr1070/Gps_Tracker/src/ubx.cpp <==
#include <math.h>
#include <string.h>
#include "Particle.h"
#include "secrets.h"
#include "ubx.h"
#define UBX_CONFIG_TIMEOUT  200     // ms, timeout for waiting on an ACK
#define UBX_PACKET_TIMEOUT	10		// ms, timeout for waiting on further data once some data has been received
#define MIN(X,Y)    ((X) < (Y) ? (X) : (Y))
#define UBX_TRACE_PARSER(s, ...)    {/*Serial.printlnf(s, ## __VA_ARGS__);*/}  /* decoding progress in parse_char() */
#define UBX_TRACE_RXMSG(s, ...)     {Serial.printlnf(s, ## __VA_ARGS__);}  /* Rx msgs in payload_rx_done() */
#define UBX_TRACE_CONFIG(s, ...)    {Serial.printlnf(s, ## __VA_ARGS__);}
#define UBX_TRACE_ASSIST(s, ...)    {Serial.printlnf(s, ## __VA_ARGS__);}
#define UBX_WARN(s, ...)        {Serial.printlnf(s, ## __VA_ARGS__);}

bool UBX::wait_for_ack(const uint16_t msg, const uint32_t timeout) {
    _ack_state = UBX_ACK_WAITING;
    _ack_waiting_msg = msg; // memorize sent msg class&ID for ACK check

    uint32_t time_started = millis();

    while ((_ack_state == UBX_ACK_WAITING) && (millis() < time_started + timeout)) {
        receive(timeout);
    }

    bool ret = (_ack_state == UBX_ACK_GOT_ACK);
    _ack_state = UBX_ACK_IDLE;
    return ret;
}

void UBX::receive(const uint32_t max_timeout) {
    uint32_t timeout = max_timeout;

    uint32_t last_received = millis();
    while (millis() < last_received + timeout) {
        while (Serial1.available() > 0) {
            last_received = millis();
            timeout = UBX_PACKET_TIMEOUT;
            parse_char(Serial1.read());
        }
    }
}

void UBX::parse_char(const uint8_t b) {
    switch (_decode_state) {
    /* Expecting Sync1 */
    case UBX_DECODE_SYNC1:
        if (b == UBX_SYNC1) {   // Sync1 found --> expecting Sync2
            UBX_TRACE_PARSER("A");
            _decode_state = UBX_DECODE_SYNC2;
        }
        break;

    /* Expecting Sync2 */
    case UBX_DECODE_SYNC2:
        if (b == UBX_SYNC2) {   // Sync2 found --> expecting Class
            UBX_TRACE_PARSER("B");
            _decode_state = UBX_DECODE_CLASS;
        } else {        // Sync1 not followed by Sync2: reset parser
            decode_init();
        }
        break;

    /* Expecting Class */
    case UBX_DECODE_CLASS:
        UBX_TRACE_PARSER("C");
        add_byte_to_checksum(b);  // checksum is calculated for everything except Sync and Checksum bytes
        _rx_msg = b;
        _decode_state = UBX_DECODE_ID;
        break;

    /* Expecting ID */
    case UBX_DECODE_ID:
        UBX_TRACE_PARSER("D");
        add_byte_to_checksum(b);
        _rx_msg |= b << 8;
        _decode_state = UBX_DECODE_LENGTH1;
        break;

    /* Expecting first length byte */
    case UBX_DECODE_LENGTH1:
        UBX_TRACE_PARSER("E");
        add_byte_to_checksum(b);
        _rx_payload_length = b;
        _decode_state = UBX_DECODE_LENGTH2;
        break;

    /* Expecting second length byte */
    case UBX_DECODE_LENGTH2:
        UBX_TRACE_PARSER("F");
        add_byte_to_checksum(b);
        _rx_payload_length |= b << 8;   // calculate payload size

        if (payload_rx_init()) {   // start payload reception
            _decode_state = (_rx_payload_length > 0) ? UBX_DECODE_PAYLOAD : UBX_DECODE_CHKSUM1;
        } else {
            // payload will not be handled, discard message
            decode_init();
        }
        break;

    /* Expecting payload */
    case UBX_DECODE_PAYLOAD:
        UBX_TRACE_PARSER(".");
        add_byte_to_checksum(b);

        if (payload_rx_add(b)) {
            // payload complete, expecting checksum
            _decode_state = UBX_DECODE_CHKSUM1;
        } else {
            // expecting more payload, stay in state UBX_DECODE_PAYLOAD
        }
        break;

    /* Expecting first checksum byte */
    case UBX_DECODE_CHKSUM1:
        if (_rx_ck_a != b) {
            UBX_WARN("ubx checksum err for msg %0.4X", _rx_msg);
            decode_init();
        } else {
            _decode_state = UBX_DECODE_CHKSUM2;
        }
        break;

    /* Expecting second checksum byte */
    case UBX_DECODE_CHKSUM2:
        if (_rx_ck_b != b) {
            UBX_WARN("ubx checksum err for msg %0.4X", _rx_msg);
        } else {
            payload_rx_done();    // finish payload processing
        }

        decode_init();
        break;
    }
}

bool UBX::payload_rx_init() {
    switch (_rx_msg) {
    case UBX_MSG_NAV_PVT:
        if (_rx_payload_length != sizeof(ubx_payload_rx_nav_pvt_t)) {
            _rx_state = UBX_RXMSG_ERROR_LENGTH;
        } else {
            _rx_state = UBX_RXMSG_HANDLE;
        }
        break;

    case UBX_MSG_NAV_AOPSTATUS:
        if (_rx_payload_length != sizeof(ubx_payload_rx_nav_aopstatus_t)) {
            _rx_state = UBX_RXMSG_ERROR_LENGTH;
        } else {
            _rx_state = UBX_RXMSG_HANDLE;
        }
        break;

    case UBX_MSG_ACK_ACK:
        if (_rx_payload_length != sizeof(ubx_payload_rx_ack_ack_t)) {
            _rx_state = UBX_RXMSG_ERROR_LENGTH;
        } else {
            _rx_state = UBX_RXMSG_HANDLE;
        }

        break;

    case UBX_MSG_ACK_NAK:
        if (_rx_payload_length != sizeof(ubx_payload_rx_ack_nak_t)) {
            _rx_state = UBX_RXMSG_ERROR_LENGTH;
        } else {
            _rx_state = UBX_RXMSG_HANDLE;
        }
        break;

    default:
        _rx_state = UBX_RXMSG_DISABLE;  // disable all other messages
        break;
    }

    switch (_rx_state) {
    case UBX_RXMSG_HANDLE:  // handle message
    case UBX_RXMSG_IGNORE:  // ignore message but don't report error
        return true;

    case UBX_RXMSG_DISABLE: // disable unexpected messages
        return false;

    case UBX_RXMSG_ERROR_LENGTH:    // error: invalid length
        UBX_WARN("ubx msg invalid len");
        return false;

    default:    // invalid message state
        UBX_WARN("ubx internal err1");
        return false;
    }
}

void UBX::payload_rx_done() {
    // return if no message handled
    if (_rx_state != UBX_RXMSG_HANDLE) {
        return;
    }

    // handle message
    switch (_rx_msg) {
    case UBX_MSG_NAV_PVT:
        UBX_TRACE_RXMSG("[%lu] Rx NAV-PVT", millis());
        _callback(_rx_msg, _buf);
        break;

    case UBX_MSG_NAV_AOPSTATUS:
        UBX_TRACE_RXMSG("[%lu] Rx NAV-AOPSTATUS %d", millis(), _buf.payload_rx_nav_aopstatus.status);
        _aop_status = (_buf.payload_rx_nav_aopstatus.status != 0);
        break;

    case UBX_MSG_ACK_ACK:
        UBX_TRACE_RXMSG("[%lu] Rx ACK-ACK", millis());

        if ((_ack_state == UBX_ACK_WAITING) && (_buf.payload_rx_ack_ack.msg == _ack_waiting_msg)) {
            _ack_state = UBX_ACK_GOT_ACK;
        }
        break;

    case UBX_MSG_ACK_NAK:
        UBX_TRACE_RXMSG("[%lu] Rx ACK-NAK", millis());

        if ((_ack_state == UBX_ACK_WAITING) && (_buf.payload_rx_ack_ack.msg == _ack_waiting_msg)) {
            _ack_state = UBX_ACK_GOT_NAK;
        }
        break;
    }
}

void UBX::send_message(const uint16_t msg, const uint8_t *payload, const uint16_t length) {
    ubx_header_t   header = {UBX_SYNC1, UBX_SYNC2};
    ubx_checksum_t checksum = {0, 0};

    // Populate header
    header.msg    = msg;
    header.length = length;

    // Calculate checksum
    calc_checksum(reinterpret_cast<const uint8_t *>(&header) + 2, sizeof(header) - 2, &checksum); // skip 2 sync bytes

    if (payload != nullptr) {
        calc_checksum(payload, length, &checksum);
    }

    // Send message
    Serial1.write(reinterpret_cast<const uint8_t *>(&header), sizeof(header));

    if (payload != nullptr) {
        Serial1.write(payload, length);
    }

    Serial1.write(reinterpret_cast<const uint8_t *>(&checksum), sizeof(checksum));
}
